Bug fixes, syntax fixes, added use strict, adjusted the spacing in floating artist editor windows so Done cannot be completely overlayed by a lookup, and a few other tiny tweaks.

--- a/root/static/styles/extra/scripts.css
+++ b/root/static/styles/extra/scripts.css
@@ -487,7 +487,7 @@ table.tbl tr.ev td.trackdur {
 #NewArtistButton {
  bottom: 8px;
  padding: 0 1em;
- margin: 1em 0 0.2em 0;
+ margin: 2.5em 0 0.2em 0;
 }
 
 #NewArtistButton {
